# hcdp_qml

./: CMakeLists.txt
data/: data.json
qml/: CenterText.qml  Footer.qml  FooterStatus.qml  GrayLabel.qml  HcdpContent.qml  HcdpInput.qml  Header.qml  Main.qml  SettingDialog.qml  header.qml
src/: main.cpp  model.h  singletonmanager.cpp  singletonmanager.h  utils.cpp  utils.h
